--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Island</title>
+    <title>Golden Island - Oasis in the City</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Golden Island</h1>
+            <h1><a href="#home">Golden Island</a></h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -32,7 +32,7 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>Golden Island is the ideal destination for those who love adventure and want to enjoy a full, exciting life at a tropical "oasis".</p>
+            <p>Golden Island is the ideal destination for those who love adventure and want to enjoy a full, exciting life at a tropical "oasis". With the perfect blend of majestic nature, unique architecture, and quality service, Golden Island brings unforgettable experiences to every guest.</p>
         </div>
     </section>
 
@@ -40,10 +40,11 @@
         <div class="container">
             <h2>Our Services</h2>
             <ul>
-                <li>Golden Bar - Cocktail & Drinks</li>
-                <li>Golden Beer Club - Brew Beach</li>
-                <li>Golden Stage - Weekly Music Events</li>
-                <li>Golden Wave - Beach Pool</li>
+                <li><a href="#golden-bar">Golden Bar - Cocktail & Drinks</a>: Special drinks including cocktails, mocktails, coffee, fresh juices, and light snacks.</li>
+                <li><a href="#golden-wave">Golden Wave - Beach Pool</a>: Pool tickets, swimming lessons.</li>
+                <li><a href="#golden-island-venue">Golden Island - Venue Event</a>: Private event venue rentals for weddings, corporate events, and parties.</li>
+                <li><a href="#golden-stage">Golden Stage - Weekly Music Events</a>: Live music events with diverse themes and performances by local and international DJs.</li>
+                <li><a href="#golden-beer-club">Golden Beer Club - Brew Beach</a>: A variety of beers, including local fresh beer with a menu designed to pair with beer.</li>
             </ul>
         </div>
     </section>
@@ -58,7 +59,7 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>Have questions? Reach out to us at contact@goldenisland.com.</p>
+            <p>Have questions? Reach out to us at <a href="mailto:contact@goldenisland.com">contact@goldenisland.com</a>.</p>
         </div>
     </section>
 
