--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><a href="#home">Golden Island</a></h1>
+            <h1><a href="#home" class="logo">Golden Island</a></h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -24,8 +24,10 @@
 
     <section id="home">
         <div class="container">
+            <img src="logo.png" alt="Golden Island Logo" class="logo">
             <h2>Welcome to Golden Island</h2>
             <p>Your tropical oasis in the heart of the city.</p>
+            <img src="cover.jpg" alt="Cover Image" class="cover">
         </div>
     </section>
 
