--- a/golden-island-venue.html
+++ b/golden-island-venue.html
@@ -12,7 +12,7 @@
             <h1><a href="index.html" class="logo">Golden Island</a></h1>
             <nav>
                 <ul>
-                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#events">Events</a></li>
