--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Island - Oasis in the City</title>
+    <title>Golden Island - "Ốc đảo" xanh giữa lòng thành phố</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container header-container">
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Golden Island Logo">
+                <img src="images/logo.png" alt="Logo Golden Island">
                 <span>Golden Island</span>
             </a>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#services">Services</a></li>
-                    <li><a href="index.html#events">Events</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
+                    <li><a href="index.html#about">Giới thiệu</a></li>
+                    <li><a href="index.html#services">Dịch vụ</a></li>
+                    <li><a href="index.html#events">Sự kiện</a></li>
+                    <li><a href="index.html#contact">Liên hệ</a></li>
                 </ul>
             </nav>
             <button class="nav-toggle" aria-label="toggle navigation">
@@ -30,46 +30,49 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <h2>Welcome to Golden Island</h2>
-            <p>Your tropical oasis in the heart of the city.</p>
-            <img src="images/cover.jpg" alt="Cover Image" class="cover">
+            <h2>Chào mừng đến với Golden Island</h2>
+            <p>"Ốc đảo" xanh giữa lòng thành phố.</p>
+            <img src="images/cover.jpg" alt="Ảnh bìa" class="cover">
         </div>
     </section>
 
     <section id="about" class="about">
         <div class="container">
-            <h2>About Us</h2>
-            <p>Golden Island is the ideal destination for those who love adventure and want to enjoy a full, exciting life at a tropical "oasis". With the perfect blend of majestic nature, unique architecture, and quality service, Golden Island brings unforgettable experiences to every guest.</p>
+            <h2>Giới thiệu</h2>
+            <p> Golden Island - "Ốc đảo" nhiệt đới ngay trong lòng thành phố.
+Nằm ngay trong lòng thành phố, Golden Island là điểm đến lý tưởng cho những ai yêu thích sự phiêu lưu và muốn tận hưởng cuộc sống trọn vẹn đầy thú vị tại một "ốc đảo" nhiệt đới. Với sự kết hợp hoàn hảo giữa thiên nhiên hùng vĩ, kiến trúc độc đáo và dịch vụ chất lượng, Golden Island mang đến những trải nghiệm khó quên cho mỗi vị khách.
+Tại Golden Island, du khách có thể thả mình xuống làn nước trong xanh của Golden Wave - Beach Pool, thưởng thức những ly cocktail tinh tế tại Golden Bar - Cocktail & Drinks, ăn những món ngon hấp dẫn tại Golden Beer Club - Brew Beach và tham gia các sự kiện âm nhạc sôi động hàng tuần tại Golden Stage - Weekly Music Events. Tất cả đều được thiết kế để đưa khách hàng vào một hành trình đầy thú vị, nơi mọi ước mơ về một không gian thư giãn lý tưởng trở thành hiện thực.
+Với vẻ đẹp tự nhiên hùng vĩ và không gian kiến trúc độc đáo, Golden Island không chỉ cung cấp các dịch vụ giải trí và thư giãn, mà còn tạo ra những khoảnh khắc đáng nhớ và những trải nghiệm độc đáo, khiến mỗi chuyến đi đến đây trở thành một cuộc phiêu lưu đáng nhớ.</p>
         </div>
     </section>
 
     <section id="services" class="services">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2>Dịch vụ của chúng tôi</h2>
             <ul>
-                <li><a href="golden-bar.html">Golden Bar - Cocktail & Drinks</a>: Special drinks including cocktails, mocktails, coffee, fresh juices, and light snacks.</li>
-                <li><a href="golden-wave.html">Golden Wave - Beach Pool</a>: Pool tickets, swimming lessons.</li>
-                <li><a href="golden-island-venue.html">Golden Island - Venue Event</a>: Private event venue rentals for weddings, corporate events, and parties.</li>
-                <li><a href="golden-stage.html">Golden Stage - Weekly Music Events</a>: Live music events with diverse themes and performances by local and international DJs.</li>
-                <li><a href="golden-beer-club.html">Golden Beer Club - Brew Beach</a>: A variety of beers, including local fresh beer with a menu designed to pair with beer.</li>
+                <li><a href="golden-bar.html">Golden Bar - Cocktail & Drinks</a>: Đồ uống đặc biệt bao gồm cocktail, mocktail, cà phê, nước ép tươi và đồ ăn nhẹ.</li>
+                <li><a href="golden-wave.html">Golden Wave - Beach Pool</a>: Thu vé tắm, lớp dạy bơi mùa hè.</li>
+                <li><a href="golden-island-venue.html">Golden Island - Venue Event</a>: Cho thuê địa điểm tổ chức sự kiện riêng tư cho đám cưới, sự kiện công ty và tiệc tùng.</li>
+                <li><a href="golden-stage.html">Golden Stage - Weekly Music Events</a>: Sự kiện âm nhạc trực tiếp với các chủ đề đa dạng và biểu diễn của các DJ trong nước và quốc tế.</li>
+                <li><a href="golden-beer-club.html">Golden Beer Club - Bia bờ biển</a>: Đa dạng các loại bia, bao gồm bia tươi địa phương với thực đơn thiết kế để kết hợp với bia.</li>
             </ul>
         </div>
     </section>
 
     <section id="events" class="events">
         <div class="container">
-            <h2>Upcoming Events</h2>
-            <p>Stay tuned for exciting events happening at Golden Island.</p>
+            <h2>Sự kiện sắp tới</h2>
+            <p>Đón chờ những sự kiện thú vị tại Golden Island.</p>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Contact Us</h2>
-            <p>Have questions? Reach out to us at <a href="mailto:contact@goldenisland.com">contact@goldenisland.com</a>.</p>
+            <h2>Liên hệ với chúng tôi</h2>
+            <p>Có câu hỏi? Liên hệ với chúng tôi tại <a href="mailto:contact@goldenisland.com">contact@goldenisland.com</a>.</p>
             <form action="submit_form.html" method="post">
                 <div class="form-group">
-                    <label for="name">Name:</label>
+                    <label for="name">Tên:</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
@@ -77,21 +80,21 @@
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="phone">Phone:</label>
+                    <label for="phone">Số điện thoại:</label>
                     <input type="tel" id="phone" name="phone" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Message:</label>
+                    <label for="message">Tin nhắn:</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Gửi">
             </form>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Golden Island. All rights reserved.</p>
+            <p>&copy; 2024 Golden Island. Đã đăng ký bản quyền.</p>
         </div>
     </footer>
 
