--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container header-container">
             <a href="index.html" class="logo">
-                <img src="images/logo2.png" alt="Logo Golden Island">
+                <img src="images/logo.png" alt="Logo Golden Island">
                 <span>Golden Island</span>
             </a>
             <nav>
