--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
                     <li><a href="index.html#events">Sự kiện</a></li>
                     <li><a href="index.html#contact">Liên hệ</a></li>
                 </ul>
+                <div class="social-links">
+                    <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+                    <a href="https://tiktok.com" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
+                    <a href="https://youtube.com" target="_blank"><img src="images/youtube.png" alt="YouTube"></a>
+                </div>
             </nav>
             <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
+                <span class="hamburger">&#9776;</span>
             </button>
         </div>
     </header>
@@ -94,6 +100,12 @@ Với vẻ đẹp tự nhiên hùng vĩ và không gian kiến trúc độc đá
 
     <footer>
         <div class="container">
+            <div class="social-links">
+                <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="https://tiktok.com" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
+                <a href="https://youtube.com" target="_blank"><img src="images/youtube.png" alt="YouTube"></a>
+            </div>
             <p>&copy; 2024 Golden Island. Đã đăng ký bản quyền.</p>
         </div>
     </footer>
